# CloudCode

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  agent.example.toml  hub.example.toml  install.ps1  install.sh
.github/workflows/: release.yml
admin-ui/: index.html  package-lock.json  package.json  vite.config.ts
admin-ui/src/: App.tsx  main.tsx
admin-ui/src/components/: CopyableToken.tsx  Layout.tsx  Logo.tsx  Modal.tsx  SessionsChart.tsx  SettingsModal.tsx  StatCard.tsx  UpdateAgentModal.tsx
admin-ui/src/lib/: api.ts  auth.tsx  hubUrl.ts  theme.ts  time.ts  version.ts
admin-ui/src/pages/: Accounts.tsx  Activity.tsx  Agents.tsx  Audit.tsx  Dashboard.tsx  Invites.tsx  Login.tsx  SessionDetail.tsx  Sessions.tsx  Stub.tsx  Workspaces.tsx
crates/agent/: Cargo.toml  build.rs
crates/agent/src/: audit.rs  auth.rs  claude.rs  config.rs  credentials.rs  fs.rs  jsonl.rs  main.rs  mcp_endpoint.rs  mcp_proxy.rs  paths.rs  proxy.rs  pty.rs  refresh.rs  supervise.rs  tunnel.rs  update.rs  ws.rs
crates/agent/src/browser/: chrome.rs  mcp_endpoint.rs  mod.rs  screencast.rs  subprocess.rs  viewer.rs
crates/agent/src/sandbox/: macos.rs  mod.rs  profile.sb  profile_permissive.sb
crates/agent/src/sync/: ignore_filter.rs  push_queue.rs  runtime.rs  watcher.rs
crates/app/: Cargo.toml
crates/app/assets/: README.md
crates/app/src/: backend.rs  config.rs  main.rs  session_view.rs  state.rs  theme.rs  wire.rs
crates/app/src/terminal/: fonts.rs  geom.rs  input.rs  mod.rs  render.rs
crates/app/src/viewer/: client.rs  mod.rs  panel.rs  proto.rs
crates/client/: Cargo.toml
crates/client/src/: auth_gate.rs  cc_browser.rs  input.rs  main.rs  mcp_host.rs  menu.rs  mouse_filter.rs  paste_detect.rs  proto.rs  relay.rs  tui.rs  wire.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: lib.rs
crates/hub/: Cargo.toml  build.rs
crates/hub/src/: audit.rs  auth.rs  config.rs  config_schema.rs  db.rs  main.rs  proxy.rs  pty_proto.rs  pty_session.rs  registry.rs  session.rs  session_proto.rs  supervise.rs  tunnel.rs  update.rs  viewer_session.rs  workspaces.rs  ws_handler.rs
crates/hub/src/admin/: api.rs  assets.rs  handlers.rs  mod.rs
crates/hub/src/app/: api.rs  assets.rs  mod.rs  viewer.rs
crates/hub/tests/: workspace_sync.rs
crates/proto/: Cargo.toml
crates/proto/src/: lib.rs
crates/smoke-ws/: Cargo.toml
crates/smoke-ws/src/: main.rs
docs/: BRANCH_NOTES_hub_managed_workspace.md  RELEASE_TESTING.md  SESSION-HANDOFF.md  USER_GUIDE.md  architecture.drawio  desktop-app.md
docs/architecture/: cc-browser.md
docs/superpowers/plans/: 2026-06-10-desktop-app-p1-agent-browser.md  2026-06-10-desktop-app-p1-e2e-smoke.md  2026-06-10-desktop-app-p2-e2e-smoke.md  2026-06-10-desktop-app-p2-screencast.md  2026-06-10-desktop-app-p3-app-terminal.md  2026-06-10-desktop-app-p3-e2e-smoke.md  2026-06-10-desktop-app-p4-browser-panel.md  2026-06-10-desktop-app-p4-e2e-smoke.md  2026-06-10-desktop-app-p5-packaging.md  2026-06-10-local-browser-m1-e2e-smoke.md  2026-06-10-local-browser-m1-transparent-pipe.md  2026-06-10-local-browser-m2-e2e-smoke.md  2026-06-10-local-browser-m2-real-browser-auth-gate.md  2026-06-10-local-browser-m3-e2e-smoke.md  2026-06-10-local-browser-m3-handoff.md  2026-06-10-p1-spike-notes.md  2026-06-10-p4-page-mapping-notes.md  2026-06-11-desktop-app-p6-cmux-ui.md  2026-06-11-desktop-app-p6-e2e-smoke.md  2026-06-12-cc-browser-remote-mcp-pipeline.md  2026-06-13-cc-browser-artifact-transfer.md  2026-06-13-cc-browser-preset.md
docs/superpowers/specs/: 2026-06-03-per-workspace-env-args-config-design.md  2026-06-04-cli-file-drop-design.md  2026-06-04-terminal-file-drop-design.md  2026-06-08-idle-workspace-reaper-design.md  2026-06-10-cloud-claude-local-browser-design.md  2026-06-10-desktop-app-design.md  2026-06-12-cc-browser-remote-mcp-design.md  2026-06-13-cc-browser-artifact-transfer-design.md  2026-06-13-cc-browser-preset-design.md
docs/test-reports/: 2026-05-17-v1.11.1-smoke.html  2026-05-18-v1.12.0-root-spa.html  2026-05-19-v1.13.0-hub-managed-workspace.html
scripts/: mcp-nav-probe.mjs  v1.13-smoke.sh
test-fixtures/: chatty-init-mcp.mjs  echo-mcp.mjs  exit-on-frame-mcp.mjs
webterm/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
webterm/src/: App.tsx  index.css  main.tsx
webterm/src/components/: AgentTree.tsx  ConfigDialog.tsx  ConfigForm.tsx  FilesModal.tsx  Logo.tsx  SettingsDialog.tsx  Sidebar.tsx  TabBar.tsx  Term.tsx  Tutorial.tsx
webterm/src/lib/: api.ts  preferences.ts  tabs.ts  termHistory.ts  theme.ts  tools.ts  uploadInsert.ts  wire.ts
webterm/src/pages/: Invite.tsx  Login.tsx  Picker.tsx  Session.tsx  Workbench.tsx
