[package]
name = "cloudcode-agent"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "cloudcode-agent"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
futures.workspace = true
argon2.workspace = true
rand.workspace = true
dirs.workspace = true
tokio-tungstenite.workspace = true
gethostname.workspace = true
whoami.workspace = true
uuid.workspace = true
dashmap.workspace = true
rustls.workspace = true
cloudcode-daemon = { path = "../daemon" }

[target.'cfg(unix)'.dependencies]
libc.workspace = true
