[package]
name = "cloudcode-app"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "cloudcode-app"
path = "src/main.rs"

[dependencies]
cloudcode-proto = { workspace = true }
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
anyhow.workspace = true
bytes.workspace = true
dirs.workspace = true
tokio.workspace = true
futures.workspace = true
tokio-tungstenite.workspace = true
rustls.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
eframe = "0.28"
egui = "0.28"
alacritty_terminal = { workspace = true }
unicode-width = { workspace = true }
zune-jpeg = { workspace = true }
