[package]
name = "cloudcode-app"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "cloudcode-app"
path = "src/main.rs"

[dependencies]
cloudcode-proto = { workspace = true }
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
anyhow.workspace = true
bytes.workspace = true
dirs.workspace = true
tokio.workspace = true
futures.workspace = true
tokio-tungstenite.workspace = true
rustls.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
eframe = "0.32"
egui = "0.32"
alacritty_terminal = { workspace = true }
unicode-width = { workspace = true }
zune-jpeg = { workspace = true }

# macOS .app bundle metadata (consumed by `cargo bundle` in the release CI).
# Not signed/notarized (no cert) — first launch needs a Gatekeeper bypass;
# see README. The .icns is generated in CI from assets/icon.png (iconutil).
[package.metadata.bundle]
name = "CloudCode"
identifier = "com.cloudcode.app"
category = "public.app-category.developer-tools"
short_description = "CloudCode desktop — claude terminal + live browser mirror"
icon = ["assets/icon.icns"]
