[package]
name = "cloudcode-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "cloudcode"
path = "src/main.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
anyhow.workspace = true
clap.workspace = true
dirs.workspace = true
tokio.workspace = true
futures.workspace = true
tokio-tungstenite.workspace = true
ratatui.workspace = true
crossterm.workspace = true
unicode-width.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
