[package]
name = "cloudcode-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "cloudcode"
path = "src/main.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
anyhow.workspace = true
clap.workspace = true
dirs.workspace = true
tokio.workspace = true
futures.workspace = true
tokio-tungstenite.workspace = true
rustls.workspace = true
crossterm.workspace = true
bytes.workspace = true

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["term", "signal"] }
libc.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
